[package]
name = "cbor-data"
version = "0.1.0"
authors = ["Roland Kuhn <rk@rkuhn.info>"]
edition = "2018"
description = "A library for using CBOR as in-memory representation for working with dynamically shaped data"
license = "MIT OR Apache-2.0"

[dependencies]
half = "1.6.0"
base64 = "0.13"

[dev-dependencies]
serde = "1"
serde_json = "1"
serde_cbor = "0.11.1"
maplit = "1"

[lib]
crate-type = ["rlib"]

[profile.release]
debug = false
