[package]
name = "cbor-data"
version = "0.2.0"
authors = ["Roland Kuhn <rk@rkuhn.info>"]
edition = "2018"
description = "A library for using CBOR as in-memory representation for working with dynamically shaped data"
license = "MIT OR Apache-2.0"

[dependencies]
half = "1.6.0"
base64 = "0.13"

[dev-dependencies]
criterion = "0.3"
maplit = "1"
rand = "0.8"
serde = "1"
serde_cbor = "0.11.1"
serde_json = "1"

[lib]
crate-type = ["rlib"]

[profile.release]
debug = false

[profile.bench]
# setting to true may improve performance by 20% but more than doubles compile time
lto = false

[[bench]]
name = "bench"
harness = false
