[workspace]
members = [".", "derive"]

[package]
name = "cbor-data"
version = "0.8.15"
authors = ["Roland Kuhn <rk@rkuhn.info>"]
edition = "2018"
description = "A library for using CBOR as in-memory representation for working with dynamically shaped data"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/cbor_data"
homepage = "https://crates.io/crates/cbor-data"
repository = "https://github.com/Actyx/cbor-data"

[features]
rfc3339 = ["chrono"]
derive = ["dep:cbor-data-derive"]

[dependencies]
base64 = "0.13.0"
chrono = { version = "0.4.19", optional = true }
half = "1.6.0"
libipld14 = { package = "libipld", version = "0.14", default-features = false, features = ["dag-cbor"], optional = true }
smallvec = { version = "1.6.1", features = ["const_generics", "write"] }
cbor-data-derive = { version = "=0.8.15", path = "derive", optional = true }

[dev-dependencies]
criterion = "0.3"
maplit = "1"
pretty_assertions = "1.0.0"
rand = "0.8"
serde = "1"
serde_cbor = "0.11.1"
serde_json = "1"

[lib]
crate-type = ["rlib"]

[profile.release]
debug = false

[profile.bench]
# setting to true may improve performance by 20% but more than doubles compile time
lto = false

[[bench]]
name = "bench"
harness = false
