[package]
name = "cbor-data-derive"
version = "0.8.18"
authors = ["Roland Kuhn <rk@rkuhn.info>"]
edition = "2018"
description = "A library for using CBOR as in-memory representation for working with dynamically shaped data"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/cbor_data"
homepage = "https://crates.io/crates/cbor-data"
repository = "https://github.com/Actyx/cbor-data"

[dependencies]
proc-macro2 = { version = "1" }
quote = { version = "1" }
syn = { version = "1", features = ["derive", "parsing"] }

[lib]
proc-macro = true
